--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/neogift/neogift/issues"
   },
-  "homepage": "https://github.com/neogift/neogift"
+  "homepage": "https://github.com/neogift/neogift",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-compass": "^0.9.1"
+  }
 }
