--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "homepage": "https://github.com/neogift/neogift",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-compass": "^0.9.1"
+    "grunt-contrib-compass": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-connect": "^0.8.0"
   }
 }
